--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "~15.6.1",
-    "react-router": "4.1.2"
+    "react-router-dom":"~4.1.2",
+    "react-router": "4.1.2",
+    "react-bootstrap":"^0.31.1"
   },
   "devDependencies": {
     "webpack": "^3.4.1",
