--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --hot",
-    "watch": "webpack -d --watch"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -18,18 +18,21 @@
   },
   "homepage": "https://github.com/benjaminhuanghuang/react-router4-study#readme",
   "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "~15.6.1",
-    "react-router-dom":"~4.1.2",
-    "react-router": "4.1.2",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "react-router-dom":"^4.2.2",
     "react-bootstrap":"^0.31.1"
   },
   "devDependencies": {
-    "webpack": "^3.4.1",
-    "babel-loader": "^7.1.1",
-    "webpack-dev-server": "~2.6.1",
-    "babel-core": "~6.25.0",
-    "babel-preset-react": "~6.24.1",
-    "babel-preset-es2015": "~6.24.1"
+    "webpack": "^4.10.1",
+    "webpack-cli":"^2.1.4",
+    "babel-loader": "^7.1.4",
+    "webpack-dev-server": "^3.1.4",
+    "babel-core": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.0"
   }
 }
